# WorldBest

./: README.md  pyproject.toml
src/worldbest/: __init__.py  cli.py
src/worldbest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_greet.py
worldbest/: .env.example  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  setup.sh  tsconfig.json  turbo.json
worldbest/apps/web/: Dockerfile  next.config.js  package.json  tailwind.config.js  tsconfig.json
worldbest/docs/deep-dive/: ai-orchestrator.md  architecture.md  data-layer.md  index.md  infrastructure.md
worldbest/infrastructure/k8s/: configmap.yaml  namespace.yaml  secrets.yaml
worldbest/infrastructure/k8s/deployments/: auth-deployment.yaml
worldbest/infrastructure/nginx/: nginx.conf  proxy_params.conf
worldbest/infrastructure/nginx/conf.d/: default.conf
worldbest/services/ai-orchestrator/: Dockerfile  README.md  package.json  tsconfig.json
worldbest/services/ai-orchestrator/src/: config.ts  index.ts  types.ts
worldbest/services/analytics/: package.json
worldbest/services/analytics/src/: config.ts  index.ts
worldbest/services/auth/: Dockerfile  package.json  tsconfig.json
worldbest/services/auth/src/: config.ts  index.ts
worldbest/services/billing/: package.json
worldbest/services/billing/src/: config.ts  index.ts
worldbest/services/export/: package.json
worldbest/services/export/src/: config.ts  index.ts  types.ts
worldbest/services/project/: Dockerfile  package.json  tsconfig.json
(+90 files in other folders)
